text wrapping fix

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -46,3 +46,7 @@
 .no-underline{
   border: none !important;
 }
+
+.text-wrap {
+  word-wrap: break-word;
+}
